<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">makemerun</string>
    <string name="app_title">Make Me Run</string>
    <string name="action_settings">Settings</string>
    <string name="default_time">00:00:00</string>
    <string name="default_distance">0,00km</string>
    <string name="mappingService">Mapping Service</string>
    <string name="title_activity_choose_goal">ChooseGoal</string>
    <string name="title_activity_subgoals">SubgoalsList</string>
    <string name="title_activity_run_test">RunTest</string>
    
    <string name="button_ok">OK</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_next_step">Next Step</string>
    <string name="button_skip">Skip</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_choose_goal">Abandon Goal</string>
	<string name="button_try_again">Try Again</string>

    <string name="title_choose_goal">Choose Your Goal</string>
    <string name="title_test_results">Are You Ready?</string>
    <string name="title_quit">Quit</string>
    <string name="title_looking_satellites">Looking for available satellites</string>
    <string name="title_gps_off">GPS locations is off</string>
    <string name="title_nice_job">Nice job!</string>
 	<string name="title_how_much_can_run">How much can you run?</string>
 
    <string name="description_run_test">Hello, let\'s see how much you can run without stopping. Press \'Start\' and start a run at moderate speed. When you get tired, press \'Stop\'.</string>
    <string name="description_test_results_ok">Hey! At a moderate speed, you can run at most %1$s! This way your trainings will be divided in a series of sprints and walks. In each training we\'ll take some km from the walk and put them on the sprints. </string>
    <string name="description_test_results_goal_completed">You have reached you goal. Choose another one!</string>
    <string name="description_test_results_under_recommended">You need to run at least 100 meters. Try again!</string>
   	<string name="description_are_you_sure">Are you sure?</string>
   	<string name="description_are_you_sure_loose_data">You will lose all data of this training set. Are you sure?</string>
	<string name="description_turn_on">Turn it back on</string>
	<string name="description_almost_there">Almost there...</string>
   	<string name="description_speed">speed</string>
   	<string name="description_distance">distance</string>
	<string name="description_of">of</string>
	<string name="description_time">time</string>
	<string name="description_subgoal">Sprints of %1$s at an intense pace, alternated with sprints of %2$s at slow/moderate pace."</string>
	<string name="description_check_do_test">I don\'t know how much I can run. Take a test!</string>
	<string name="description_manual_input">We need to know the distance you can run without stopping, and at which pace you wanna do it. Leave the Pace field in blank, if you\'re not interested in monitoring the pace.</string>

	<string name="voice_start_running">Start Running!</string>
	<string name="voice_start_walking">Start Walking!</string>
	<string name="voice_end_training">Nice job! See you next training!</string>
	
	<string name="loading_current_goal">Loading current goal...</string>
	<string name="loading_first_fix">Getting GPS first fix...</string>
	<string name="loading_voice_system">Loading voice system...</string>

	<string name="field_label_distance">Distance (km)</string>
	<string name="field_label_pace">Pace (min/km)</string>

	<string name="field_error_distance_required">*Required</string>
	<string name="field_error_distance_low_value">*Minimum Distance: 0.1km (100 meters)</string>
	<string name="field_error_invalid_pace">*Invalida pace. Ex.: 05:30</string>

	<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>