<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circular="http://schemas.android.com/apk/res/com.br.makemerun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >


    <com.br.makemerun.view.widgets.CircularProgressBar
        android:id="@+id/progressKmTotal"
        style="@style/Widget.ProgressBar.CircularProgressBar"
        android:layout_width="180dip"
        android:layout_height="180dip"
        circular:backgroundColor="#222222"
        circular:strokeWidth="35"
        circular:progressColor="#dd7700"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <com.br.makemerun.view.widgets.CircularProgressBar
        android:id="@+id/progressKmPartial"
        style="@style/Widget.ProgressBar.CircularProgressBar"
        android:layout_width="130dip"
        android:layout_height="130dip"
        circular:backgroundColor="#333333"
        circular:progressColor="#ff9900"
        circular:strokeWidth="35"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/layStateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        
        <TextView
	        android:id="@+id/txPartial"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/icState"
	        android:layout_centerHorizontal="true"
	        android:fontFamily="sans-serif-light"
	        android:text="1.5km"
	        android:textColor="#ffffff"
	        android:textSize="16sp" />
            
        <ImageView
	        android:id="@+id/icState"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:src="@drawable/runicon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btnStartStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/window"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/button_stop"
        android:textStyle="bold"
        android:textColor="#bbbbbb"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txTimerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_time"
        android:textColor="#ffffff"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/txDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txTimerValue"
        android:layout_alignTop="@+id/txTimerValue"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_distance"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/btnSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txDistance"
        android:layout_centerHorizontal="true"
        android:src="@drawable/volon" />

</RelativeLayout>